...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="Pu6-zi-69s">
                                <rect key="frame" x="138" y="731" width="141" height="47"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <fontDescription key="fontDescription" name="Baskerville" family="Baskerville" pointSize="30"/>
                                <state key="normal" title="Start Game">
                                    <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="startGameButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="WQg-d3-JOO"/>
                                    <segue destination="4fk-Xb-N0z" kind="show" id="4Ic-J8-db6"/>
                                </connections>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qh2-lz-VP1">
                                <rect key="frame" x="122" y="741" width="170" height="65"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <fontDescription key="fontDescription" name="Baskerville" family="Baskerville" pointSize="30"/>
                                <state key="normal" title="Continue">
                                    <color key="titleColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <segue destination="Ihq-dX-moD" kind="show" id="iOn-T0-vRD"/>
                                </connections>
                            </button>
...
                            <constraint firstItem="PgD-Cs-SrN" firstAttribute="trailing" secondItem="ypw-NJ-sse" secondAttribute="trailing" id="v4I-wW-5ff"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="PgD-Cs-SrN"/>
                    </view>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" id="UeC-hD-R9e">
                        <barButtonItem key="rightBarButtonItem" title="Next" id="vLy-uC-DSz">
                            <connections>
                                <segue destination="vhu-J9-Dgk" kind="show" id="2hP-NM-sbJ"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
...
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qon-mr-P3J">
                                        <rect key="frame" x="81" y="-20" width="202" height="60"/>
                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                        <color key="backgroundColor" systemColor="systemGrayColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="LeftHanded"/>
                                        <fontDescription key="fontDescription" name="Baskerville" family="Baskerville" pointSize="21"/>
                                        <state key="normal" title="A left-handed person">
                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
                                        <connections>
                                            <action selector="buttonTapped:" destination="qOI-kq-lm1" eventType="touchUpInside" id="a4d-7I-Shr"/>
...
                                    <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <segue destination="VB1-cK-9WU" kind="show" id="su4-Yn-1IV"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Novice Detective" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D3y-dQ-h2A">
                                <rect key="frame" x="257" y="707" width="137" height="23"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <fontDescription key="fontDescription" name="Baskerville" family="Baskerville" pointSize="20"/>
                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <nil key="highlightedColor"/>
                            </label>
...
